# ROS2-NMPC-ACADOS

./: .gitignore  README.md
ros2_nmpc/: CMakeLists.txt  package.xml
ros2_nmpc/acados_generated/differential_drive/: Makefile
ros2_nmpc/config/: ekf_diff_params.yaml  nmpc_diff_params.yaml  trajectory_params.yaml
ros2_nmpc/include/ros2_nmpc/: acados_base.hpp  ekf_differential_drive.hpp  extended_kalman_filter.hpp  nmpc_differential_drive.hpp  trajectory_generator.hpp
ros2_nmpc/launch/: nmpc_differential_drive_node.launch.py  trajectory_generator.launch.py
ros2_nmpc/src/: acados_base.cpp  acados_cpp_wrapper.cpp  differential_drive_action_server.cpp  differential_drive_ekf_node.cpp  ekf_differential_drive.cpp  ekf_differential_drive_node.cpp  extended_kalman_filter.cpp  nmpc_differential_drive.cpp  nmpc_differential_drive_node.cpp  trajectory_generator.cpp  trajectory_node.cpp
ros2_nmpc/srv/: SetTarget.srv
